@@ -1292,7 +1292,7 @@ proc simRun {real_run} {
 
   if {$real_run == 1} {
     #exec echo "$cmdline ; sleep 2" > $runmonte
-    exec xterm -title "Monte solver: $i_file_name" -e "$cmdline ; sleep 3"
+    exec xterm -title "Monte solver: $i_file_name" -e /bin/sh "$cmdline ; sleep 3"
   } 
 
   wm deiconify .
