@@ -1,3 +1,8 @@
+### Tue Dec 21 19:44:23 CET 2010
+
+  + Convergence testing (serial code only, from command line)
+
+
 ### Sat Oct  9 21:44:10 CEST 2010
 
   + Win32 DLL support (with MINGW)
